# ipcamviewer

./: CMakeLists.txt  LICENSE  README.md  ipcam_gst.h  main.c
draw.io/: ipcam_pipeline.xml
