cmake_minimum_required(VERSION 3.0)

project(gstgtkexample)
set(CMAKE_C_STANDARD 99)
add_executable(gstgtkexample main.c ipcam_gst.h)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake-build-debug/Modules/")
set(PKG_CONFIG_EXECUTABLE "C:\\pkg-config-lite-0.28-1\\bin\\pkg-config")
set(PKG_CONFIG_PATH "C:\\gstreamer-dev\\1.0\\x86_64\\lib\\pkgconfig")

#message(STATUS "PKG_CONFIG_PATH: " ${PKG_CONFIG_PATH})
#message(STATUS "CMAKE_PREFIX_PATH: " ${CMAKE_PREFIX_PATH})

find_package(GObject REQUIRED)
if(GObject_FOUND)
    message(STATUS "GObject FOUND!")
endif()

find_package(GLib2 REQUIRED)
if(GLib2_FOUND)
    message(STATUS "GLib2 FOUND!")
endif()

find_package(GStreamer REQUIRED)
if(GStreamer_FOUND)
    message(STATUS "GStreamer FOUND!")
    include_directories(gstgtkexample ${GSTREAMER_INCLUDE_DIRS})
    add_definitions(${GSTREAMER_DEFINITIONS})
#    set(GSTREAMER_LIBRARIES ${GSTREAMER_LIBRARY} "C:\\gstreamer-dev\\1.0\\x86_64\\lib\\lgobject-2.0.dll.a" "C:\\gstreamer-dev\\1.0\\x86_64\\lib\\lglib-2.0.dll.a" "C:\\gstreamer-dev\\1.0\\x86_64\\lib\\lintl.dll.a")
#    link_directories(${GSTREAMER_LIBRARY} C:\\gstreamer-dev\\1.0\\x86_64\\lib\\lgobject-2.0.dll.a C:\\gstreamer-dev\\1.0\\x86_64\\lib\\lglib-2.0.dll.a C:\\gstreamer-dev\\1.0\\x86_64\\lib\\lintl.dll.a)
    set(GSTREAMER_LIBRARIES ${GSTREAMER_LIBRARY})
    target_link_libraries(gstgtkexample ${GSTREAMER_LIBRARIES} ${GOBJECT_LIBRARIES} ${GLIB2_LIBRARIES})
endif()

#message(STATUS "GObject_FOUND: " ${GObject_FOUND})
#message(STATUS "GLib2_FOUND: " ${GLIB2_FOUND})
#message(STATUS "GStreamer_FOUND: " ${GStreamer_FOUND})

#message(STATUS "CFLAGS: " ${GSTREAMER_DEFINITIONS})
#message(STATUS "LLib: " ${GSTREAMER_LIBRARIES})
#message(STATUS "INC: " ${GSTREAMER_INCLUDE_DIRS})
#message(STATUS "CFLAGS: " ${GSTREAMER_DEFINITIONS})
#message(STATUS "INC: " ${GLIB2_INCLUDE_DIR})
#message(STATUS "LLIB: " ${GLIB2_LIBRARIES})
#message(STATUS "LLIB: " ${GOBJECT_LIBRARIES})